--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,15 +3,32 @@ body{
   padding: 0;
 }
 
+i{
+  font-family: untitled-font-2;
+  font-size: 4em;
+}
+
 section {
   width: 100%;
 }
 
 section .item {
-  width: 23%;
+  width: 22%;
   margin:  25px 1%;
   display: inline-block;
   height: 90px;
+}
+
+section .item:hover {
+  cursor: hover;
+}
+
+section .item i{
+  margin-left: 12px;
+}
+
+section .item.active i{
+  color: #fff;
 }
 
 section.map {
@@ -26,6 +43,7 @@ section.map {
 
 section.inventory {
   background-color: #3FB34F;
+  color: #fff;
 }
 
 section.inventory .item {
@@ -42,4 +60,24 @@ section.chest {
 section.chest .item {
   background-color: #1C53A5;
   color: #1073B9;
+}
+
+section.inventory .item.active {
+  color: #fff;
+}
+
+section.chest .item.active {
+  color: #fff;
+}
+
+section .item.title{
+  background-color: transparent;
+}
+
+section.inventory .item.title i{
+  color: #139148;
+}
+
+section.chest .item.title i{
+  color: #1C53A5;
 }
